--- a/main.mustache
+++ b/main.mustache
@@ -4,7 +4,7 @@
 <p>Welcome to my page!</p>
 
 # Top Airing Anime's in this Season
-> This <i>README</i> file is generated <b>every 3 hours</b>!</br>Last refresh: {{refresh_date}}<br /></p>
+> This <i>LIST</i> is generated <b>every 3 hours</b>!</br>Last refresh: {{refresh_date}}<br /></p>
 
 |   |   |   |   |  |
 | :---:         |     :---:      |          :---: | :---:         |     :---:      |
@@ -27,8 +27,6 @@
 <br />
 
 ### Things i code with:
-<br />
-
 #### Frontend
 
 [<img align="left" alt="HTML5" width="26px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" />][htmlplaylist]
